// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`otpEmailHtml > renders for locale de 1`] = `
"<!DOCTYPE html>
<html lang="de">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width,initial-scale=1">
  <meta name="color-scheme" content="light dark">
  <meta name="supported-color-schemes" content="light dark">
  <style>
    :root { color-scheme: light dark; }
    @media (prefers-color-scheme: dark) {
      .email-bg { background-color: #18181b !important; }
      .card { background-color: #27272a !important; border-color: #3f3f46 !important; }
      .title { color: #fafafa !important; }
      .subtitle { color: #a1a1aa !important; }
      .code-box { background-color: #3f3f46 !important; border-color: #52525b !important; }
      .code { color: #a78bfa !important; }
      .divider { background-color: #3f3f46 !important; }
      .muted { color: #71717a !important; }
      .brand { color: #fafafa !important; }
    }
  </style>
</head>
<body style="margin:0;padding:0;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;">
  <table role="presentation" class="email-bg" width="100%" cellpadding="0" cellspacing="0" style="background-color:#f4f4f5;">
    <tr><td align="center" style="padding:48px 16px;">
      <table role="presentation" width="480" cellpadding="0" cellspacing="0" style="max-width:480px;width:100%;">

        <tr><td align="center" style="padding-bottom:32px;">
          <span class="brand" style="font-size:16px;font-weight:600;color:#18181b;letter-spacing:0.3px;">Kharko Dozor</span>
        </td></tr>

        <tr><td class="card" style="background-color:#ffffff;border-radius:12px;border:1px solid #e4e4e7;">
          <table role="presentation" width="100%" cellpadding="0" cellspacing="0">

            <tr><td style="padding:36px 32px 8px;text-align:center;">
              <p class="title" style="margin:0;font-size:20px;font-weight:600;color:#18181b;">Bestätigungscode</p>
            </td></tr>

            <tr><td style="padding:4px 32px 24px;text-align:center;">
              <p class="subtitle" style="margin:0;font-size:14px;color:#71717a;">Geben Sie diesen Code ein, um sich anzumelden. Er läuft in 10 Minuten ab.</p>
            </td></tr>

            <tr><td align="center" style="padding:0 32px 32px;">
              <div class="code-box" style="background-color:#f4f4f5;border-radius:8px;border:1px solid #e4e4e7;padding:14px 28px;">
                <span class="code" style="font-size:32px;font-weight:700;color:#7c3aed;font-family:'SF Mono',SFMono-Regular,Consolas,'Liberation Mono',Menlo,monospace;letter-spacing:0.4em;">123456</span>
              </div>
            </td></tr>

            <tr><td style="padding:0 32px;">
              <div class="divider" style="height:1px;background-color:#e4e4e7;"></div>
            </td></tr>

            <tr><td style="padding:20px 32px 28px;text-align:center;">
              <p class="muted" style="margin:0;font-size:13px;color:#a1a1aa;line-height:1.5;">
                Wenn Sie diesen Code nicht angefordert haben, können Sie diese E-Mail sicher ignorieren.
              </p>
            </td></tr>

          </table>
        </td></tr>

        <tr><td style="padding-top:24px;text-align:center;">
          <p class="muted" style="margin:0;font-size:12px;color:#a1a1aa;">
            Kharko Dozor — Aufzeichnung und Wiedergabe von Sitzungen
          </p>
        </td></tr>

      </table>
    </td></tr>
  </table>
</body>
</html>"
`;

exports[`otpEmailHtml > renders for locale en 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width,initial-scale=1">
  <meta name="color-scheme" content="light dark">
  <meta name="supported-color-schemes" content="light dark">
  <style>
    :root { color-scheme: light dark; }
    @media (prefers-color-scheme: dark) {
      .email-bg { background-color: #18181b !important; }
      .card { background-color: #27272a !important; border-color: #3f3f46 !important; }
      .title { color: #fafafa !important; }
      .subtitle { color: #a1a1aa !important; }
      .code-box { background-color: #3f3f46 !important; border-color: #52525b !important; }
      .code { color: #a78bfa !important; }
      .divider { background-color: #3f3f46 !important; }
      .muted { color: #71717a !important; }
      .brand { color: #fafafa !important; }
    }
  </style>
</head>
<body style="margin:0;padding:0;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;">
  <table role="presentation" class="email-bg" width="100%" cellpadding="0" cellspacing="0" style="background-color:#f4f4f5;">
    <tr><td align="center" style="padding:48px 16px;">
      <table role="presentation" width="480" cellpadding="0" cellspacing="0" style="max-width:480px;width:100%;">

        <tr><td align="center" style="padding-bottom:32px;">
          <span class="brand" style="font-size:16px;font-weight:600;color:#18181b;letter-spacing:0.3px;">Kharko Dozor</span>
        </td></tr>

        <tr><td class="card" style="background-color:#ffffff;border-radius:12px;border:1px solid #e4e4e7;">
          <table role="presentation" width="100%" cellpadding="0" cellspacing="0">

            <tr><td style="padding:36px 32px 8px;text-align:center;">
              <p class="title" style="margin:0;font-size:20px;font-weight:600;color:#18181b;">Verification code</p>
            </td></tr>

            <tr><td style="padding:4px 32px 24px;text-align:center;">
              <p class="subtitle" style="margin:0;font-size:14px;color:#71717a;">Enter this code to sign in. It expires in 10 minutes.</p>
            </td></tr>

            <tr><td align="center" style="padding:0 32px 32px;">
              <div class="code-box" style="background-color:#f4f4f5;border-radius:8px;border:1px solid #e4e4e7;padding:14px 28px;">
                <span class="code" style="font-size:32px;font-weight:700;color:#7c3aed;font-family:'SF Mono',SFMono-Regular,Consolas,'Liberation Mono',Menlo,monospace;letter-spacing:0.4em;">123456</span>
              </div>
            </td></tr>

            <tr><td style="padding:0 32px;">
              <div class="divider" style="height:1px;background-color:#e4e4e7;"></div>
            </td></tr>

            <tr><td style="padding:20px 32px 28px;text-align:center;">
              <p class="muted" style="margin:0;font-size:13px;color:#a1a1aa;line-height:1.5;">
                If you didn't request this code, you can safely ignore this email.
              </p>
            </td></tr>

          </table>
        </td></tr>

        <tr><td style="padding-top:24px;text-align:center;">
          <p class="muted" style="margin:0;font-size:12px;color:#a1a1aa;">
            Kharko Dozor — session recording & replay
          </p>
        </td></tr>

      </table>
    </td></tr>
  </table>
</body>
</html>"
`;

exports[`otpEmailHtml > renders for locale es 1`] = `
"<!DOCTYPE html>
<html lang="es">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width,initial-scale=1">
  <meta name="color-scheme" content="light dark">
  <meta name="supported-color-schemes" content="light dark">
  <style>
    :root { color-scheme: light dark; }
    @media (prefers-color-scheme: dark) {
      .email-bg { background-color: #18181b !important; }
      .card { background-color: #27272a !important; border-color: #3f3f46 !important; }
      .title { color: #fafafa !important; }
      .subtitle { color: #a1a1aa !important; }
      .code-box { background-color: #3f3f46 !important; border-color: #52525b !important; }
      .code { color: #a78bfa !important; }
      .divider { background-color: #3f3f46 !important; }
      .muted { color: #71717a !important; }
      .brand { color: #fafafa !important; }
    }
  </style>
</head>
<body style="margin:0;padding:0;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;">
  <table role="presentation" class="email-bg" width="100%" cellpadding="0" cellspacing="0" style="background-color:#f4f4f5;">
    <tr><td align="center" style="padding:48px 16px;">
      <table role="presentation" width="480" cellpadding="0" cellspacing="0" style="max-width:480px;width:100%;">

        <tr><td align="center" style="padding-bottom:32px;">
          <span class="brand" style="font-size:16px;font-weight:600;color:#18181b;letter-spacing:0.3px;">Kharko Dozor</span>
        </td></tr>

        <tr><td class="card" style="background-color:#ffffff;border-radius:12px;border:1px solid #e4e4e7;">
          <table role="presentation" width="100%" cellpadding="0" cellspacing="0">

            <tr><td style="padding:36px 32px 8px;text-align:center;">
              <p class="title" style="margin:0;font-size:20px;font-weight:600;color:#18181b;">Código de verificación</p>
            </td></tr>

            <tr><td style="padding:4px 32px 24px;text-align:center;">
              <p class="subtitle" style="margin:0;font-size:14px;color:#71717a;">Introduce este código para iniciar sesión. Caduca en 10 minutos.</p>
            </td></tr>

            <tr><td align="center" style="padding:0 32px 32px;">
              <div class="code-box" style="background-color:#f4f4f5;border-radius:8px;border:1px solid #e4e4e7;padding:14px 28px;">
                <span class="code" style="font-size:32px;font-weight:700;color:#7c3aed;font-family:'SF Mono',SFMono-Regular,Consolas,'Liberation Mono',Menlo,monospace;letter-spacing:0.4em;">123456</span>
              </div>
            </td></tr>

            <tr><td style="padding:0 32px;">
              <div class="divider" style="height:1px;background-color:#e4e4e7;"></div>
            </td></tr>

            <tr><td style="padding:20px 32px 28px;text-align:center;">
              <p class="muted" style="margin:0;font-size:13px;color:#a1a1aa;line-height:1.5;">
                Si no solicitaste este código, puedes ignorar este correo.
              </p>
            </td></tr>

          </table>
        </td></tr>

        <tr><td style="padding-top:24px;text-align:center;">
          <p class="muted" style="margin:0;font-size:12px;color:#a1a1aa;">
            Kharko Dozor — grabación y reproducción de sesiones
          </p>
        </td></tr>

      </table>
    </td></tr>
  </table>
</body>
</html>"
`;

exports[`otpEmailHtml > renders for locale it 1`] = `
"<!DOCTYPE html>
<html lang="it">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width,initial-scale=1">
  <meta name="color-scheme" content="light dark">
  <meta name="supported-color-schemes" content="light dark">
  <style>
    :root { color-scheme: light dark; }
    @media (prefers-color-scheme: dark) {
      .email-bg { background-color: #18181b !important; }
      .card { background-color: #27272a !important; border-color: #3f3f46 !important; }
      .title { color: #fafafa !important; }
      .subtitle { color: #a1a1aa !important; }
      .code-box { background-color: #3f3f46 !important; border-color: #52525b !important; }
      .code { color: #a78bfa !important; }
      .divider { background-color: #3f3f46 !important; }
      .muted { color: #71717a !important; }
      .brand { color: #fafafa !important; }
    }
  </style>
</head>
<body style="margin:0;padding:0;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;">
  <table role="presentation" class="email-bg" width="100%" cellpadding="0" cellspacing="0" style="background-color:#f4f4f5;">
    <tr><td align="center" style="padding:48px 16px;">
      <table role="presentation" width="480" cellpadding="0" cellspacing="0" style="max-width:480px;width:100%;">

        <tr><td align="center" style="padding-bottom:32px;">
          <span class="brand" style="font-size:16px;font-weight:600;color:#18181b;letter-spacing:0.3px;">Kharko Dozor</span>
        </td></tr>

        <tr><td class="card" style="background-color:#ffffff;border-radius:12px;border:1px solid #e4e4e7;">
          <table role="presentation" width="100%" cellpadding="0" cellspacing="0">

            <tr><td style="padding:36px 32px 8px;text-align:center;">
              <p class="title" style="margin:0;font-size:20px;font-weight:600;color:#18181b;">Codice di verifica</p>
            </td></tr>

            <tr><td style="padding:4px 32px 24px;text-align:center;">
              <p class="subtitle" style="margin:0;font-size:14px;color:#71717a;">Inserisci questo codice per accedere. Scade tra 10 minuti.</p>
            </td></tr>

            <tr><td align="center" style="padding:0 32px 32px;">
              <div class="code-box" style="background-color:#f4f4f5;border-radius:8px;border:1px solid #e4e4e7;padding:14px 28px;">
                <span class="code" style="font-size:32px;font-weight:700;color:#7c3aed;font-family:'SF Mono',SFMono-Regular,Consolas,'Liberation Mono',Menlo,monospace;letter-spacing:0.4em;">123456</span>
              </div>
            </td></tr>

            <tr><td style="padding:0 32px;">
              <div class="divider" style="height:1px;background-color:#e4e4e7;"></div>
            </td></tr>

            <tr><td style="padding:20px 32px 28px;text-align:center;">
              <p class="muted" style="margin:0;font-size:13px;color:#a1a1aa;line-height:1.5;">
                Se non hai richiesto questo codice, puoi ignorare questa email.
              </p>
            </td></tr>

          </table>
        </td></tr>

        <tr><td style="padding-top:24px;text-align:center;">
          <p class="muted" style="margin:0;font-size:12px;color:#a1a1aa;">
            Kharko Dozor — registrazione e riproduzione di sessioni
          </p>
        </td></tr>

      </table>
    </td></tr>
  </table>
</body>
</html>"
`;

exports[`otpEmailHtml > renders for locale pt 1`] = `
"<!DOCTYPE html>
<html lang="pt">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width,initial-scale=1">
  <meta name="color-scheme" content="light dark">
  <meta name="supported-color-schemes" content="light dark">
  <style>
    :root { color-scheme: light dark; }
    @media (prefers-color-scheme: dark) {
      .email-bg { background-color: #18181b !important; }
      .card { background-color: #27272a !important; border-color: #3f3f46 !important; }
      .title { color: #fafafa !important; }
      .subtitle { color: #a1a1aa !important; }
      .code-box { background-color: #3f3f46 !important; border-color: #52525b !important; }
      .code { color: #a78bfa !important; }
      .divider { background-color: #3f3f46 !important; }
      .muted { color: #71717a !important; }
      .brand { color: #fafafa !important; }
    }
  </style>
</head>
<body style="margin:0;padding:0;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;">
  <table role="presentation" class="email-bg" width="100%" cellpadding="0" cellspacing="0" style="background-color:#f4f4f5;">
    <tr><td align="center" style="padding:48px 16px;">
      <table role="presentation" width="480" cellpadding="0" cellspacing="0" style="max-width:480px;width:100%;">

        <tr><td align="center" style="padding-bottom:32px;">
          <span class="brand" style="font-size:16px;font-weight:600;color:#18181b;letter-spacing:0.3px;">Kharko Dozor</span>
        </td></tr>

        <tr><td class="card" style="background-color:#ffffff;border-radius:12px;border:1px solid #e4e4e7;">
          <table role="presentation" width="100%" cellpadding="0" cellspacing="0">

            <tr><td style="padding:36px 32px 8px;text-align:center;">
              <p class="title" style="margin:0;font-size:20px;font-weight:600;color:#18181b;">Código de verificação</p>
            </td></tr>

            <tr><td style="padding:4px 32px 24px;text-align:center;">
              <p class="subtitle" style="margin:0;font-size:14px;color:#71717a;">Introduza este código para iniciar sessão. Expira em 10 minutos.</p>
            </td></tr>

            <tr><td align="center" style="padding:0 32px 32px;">
              <div class="code-box" style="background-color:#f4f4f5;border-radius:8px;border:1px solid #e4e4e7;padding:14px 28px;">
                <span class="code" style="font-size:32px;font-weight:700;color:#7c3aed;font-family:'SF Mono',SFMono-Regular,Consolas,'Liberation Mono',Menlo,monospace;letter-spacing:0.4em;">123456</span>
              </div>
            </td></tr>

            <tr><td style="padding:0 32px;">
              <div class="divider" style="height:1px;background-color:#e4e4e7;"></div>
            </td></tr>

            <tr><td style="padding:20px 32px 28px;text-align:center;">
              <p class="muted" style="margin:0;font-size:13px;color:#a1a1aa;line-height:1.5;">
                Se não pediu este código, pode ignorar este email.
              </p>
            </td></tr>

          </table>
        </td></tr>

        <tr><td style="padding-top:24px;text-align:center;">
          <p class="muted" style="margin:0;font-size:12px;color:#a1a1aa;">
            Kharko Dozor — gravação e reprodução de sessões
          </p>
        </td></tr>

      </table>
    </td></tr>
  </table>
</body>
</html>"
`;

exports[`otpEmailHtml > renders for locale uk 1`] = `
"<!DOCTYPE html>
<html lang="uk">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width,initial-scale=1">
  <meta name="color-scheme" content="light dark">
  <meta name="supported-color-schemes" content="light dark">
  <style>
    :root { color-scheme: light dark; }
    @media (prefers-color-scheme: dark) {
      .email-bg { background-color: #18181b !important; }
      .card { background-color: #27272a !important; border-color: #3f3f46 !important; }
      .title { color: #fafafa !important; }
      .subtitle { color: #a1a1aa !important; }
      .code-box { background-color: #3f3f46 !important; border-color: #52525b !important; }
      .code { color: #a78bfa !important; }
      .divider { background-color: #3f3f46 !important; }
      .muted { color: #71717a !important; }
      .brand { color: #fafafa !important; }
    }
  </style>
</head>
<body style="margin:0;padding:0;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;">
  <table role="presentation" class="email-bg" width="100%" cellpadding="0" cellspacing="0" style="background-color:#f4f4f5;">
    <tr><td align="center" style="padding:48px 16px;">
      <table role="presentation" width="480" cellpadding="0" cellspacing="0" style="max-width:480px;width:100%;">

        <tr><td align="center" style="padding-bottom:32px;">
          <span class="brand" style="font-size:16px;font-weight:600;color:#18181b;letter-spacing:0.3px;">Kharko Dozor</span>
        </td></tr>

        <tr><td class="card" style="background-color:#ffffff;border-radius:12px;border:1px solid #e4e4e7;">
          <table role="presentation" width="100%" cellpadding="0" cellspacing="0">

            <tr><td style="padding:36px 32px 8px;text-align:center;">
              <p class="title" style="margin:0;font-size:20px;font-weight:600;color:#18181b;">Код підтвердження</p>
            </td></tr>

            <tr><td style="padding:4px 32px 24px;text-align:center;">
              <p class="subtitle" style="margin:0;font-size:14px;color:#71717a;">Введіть цей код, щоб увійти. Код дійсний 10 хвилин.</p>
            </td></tr>

            <tr><td align="center" style="padding:0 32px 32px;">
              <div class="code-box" style="background-color:#f4f4f5;border-radius:8px;border:1px solid #e4e4e7;padding:14px 28px;">
                <span class="code" style="font-size:32px;font-weight:700;color:#7c3aed;font-family:'SF Mono',SFMono-Regular,Consolas,'Liberation Mono',Menlo,monospace;letter-spacing:0.4em;">123456</span>
              </div>
            </td></tr>

            <tr><td style="padding:0 32px;">
              <div class="divider" style="height:1px;background-color:#e4e4e7;"></div>
            </td></tr>

            <tr><td style="padding:20px 32px 28px;text-align:center;">
              <p class="muted" style="margin:0;font-size:13px;color:#a1a1aa;line-height:1.5;">
                Якщо ви не запитували цей код, можете просто ігнорувати цей лист.
              </p>
            </td></tr>

          </table>
        </td></tr>

        <tr><td style="padding-top:24px;text-align:center;">
          <p class="muted" style="margin:0;font-size:12px;color:#a1a1aa;">
            Kharko Dozor — запис і відтворення користувацьких сесій
          </p>
        </td></tr>

      </table>
    </td></tr>
  </table>
</body>
</html>"
`;
